tests/errors/errors_print_no_message.c
#include <stdio.h>
#include <stdlib.h>
#include "../../src/errors/errors.h"

int main(int argc, char *argv[]) {
    init_error_queue();
    print_errors();
    return EXIT_SUCCESS;
}